--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -17,6 +17,7 @@
 @import "_buttons";
 @import "_cards";
 @import "_conversations";
+@import "_cookieconsent";
 @import "_datepicker";
 @import "_dropdowns";
 @import "_elements";
