--- a/ODK.Web.Razor/wwwroot/css/_dropdowns.scss
+++ b/ODK.Web.Razor/wwwroot/css/_dropdowns.scss
@@ -14,6 +14,10 @@
             background-color: var(--odk-bg-level-1-hover);
         }
     }
+    // nested
+    .dropdown.dropstart .dropdown-menu[data-bs-popper] {
+        margin-right: 0;
+    }
 }
 
 .dropdown-item {
