--- a/ODK.Web.Razor/wwwroot/css/odk/_badges.scss
+++ b/ODK.Web.Razor/wwwroot/css/odk/_badges.scss
@@ -1,6 +1,9 @@
 ﻿html[data-platform="odk"] {
     --odk-badges-padding-top: 0.5rem;
     --odk-badges-line-height: 0.5;
-    padding-top: var(--odk-badges-padding-top);
-    line-height: var(--odk-badges-line-height);
+
+    .badge {
+        padding-top: var(--odk-badges-padding-top);
+        line-height: var(--odk-badges-line-height);
+    }
 }
