--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -39,13 +39,15 @@
     <div class="position-relative
                 @(Model.Fluid ? "container-fluid" : "container")">
         <div class="d-flex align-items-center">
-            <button 
-                class="navbar-toggler @(Model.MenuItems.Length == 0 ? "invisible" : "")" 
-                type="button" data-bs-toggle="collapse" data-bs-target="#@id"
-                aria-controls="@id" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-                
+            @if (Model.MenuItems.Any(x => x.Any(y => y.Hidden)))    
+            {
+                <button class="navbar-toggler @(Model.MenuItems.Length == 0 ? "invisible" : "")"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#@id"
+                        aria-controls="@id" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            }            
+            
             @if (!Model.HideAccountMenu)
             {
                 @if (User.Identity?.IsAuthenticated == true)
