(member admin): option to add member approvals

--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MembershipSettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MembershipSettingsContent.cshtml
@@ -19,6 +19,7 @@
                 @Html.AntiForgeryToken()
                 @await Html.PartialAsync("Admin/Members/_MembershipSettingsForm", new MembershipSettingsFormViewModel
                 {
+                    ApproveNewMembers = membershipSettings?.ApproveNewMembers ?? false,
                     Enabled = membershipSettings?.Enabled ?? false,
                     MembershipDisabledAfter = membershipSettings?.MembershipDisabledAfterDaysExpired ?? 0,
                     MembershipExpiringWarningDays = membershipSettings?.MembershipExpiringWarningDays ?? 0,
