--- a/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
@@ -3,6 +3,7 @@
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Admin
 @using ODK.Web.Razor.Models.Components
 @inject IPlatformProvider PlatformProvider
 @inject IRequestCache RequestCache
@@ -23,7 +24,10 @@
     Content = await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
     {
         BodyContentFunc = _ => RenderBody(),
-        MenuContent = await Html.PartialAsync("Admin/_AdminSideMenu", chapter)
+        MenuContent = await Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+        {
+            Chapter = chapter
+        })
     }),
     Title = chapter.Name
 })
