--- a/ODK.Web.Razor/Pages/Shared/_OdkChapterAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_OdkChapterAdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Razor.Models.Components
+﻿@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Header
 @using ODK.Core.Chapters
 @using ODK.Core.Members
@@ -23,7 +24,10 @@
     Content = await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
     {
         BodyContentFunc = _ => RenderBody(),
-        MenuContent = await Html.PartialAsync("Admin/_AdminSideMenu", chapter)
+        MenuContent = await Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+        {
+            Chapter = chapter
+        })
     })
 })
 
