--- a/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
@@ -3,12 +3,13 @@
 @using ODK.Services.Authentication
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Admin
 @using ODK.Web.Razor.Models.Components
-@model Chapter
+@model AdminSideMenuViewModel
 @inject IPlatformProvider PlatformProvider
 @{
     var platform = PlatformProvider.GetPlatform();
-    var chapter = Model;
+    var chapter = Model.Chapter;
 
     var groupLinks = new[]
     {
@@ -37,6 +38,21 @@
         platform == PlatformType.DrunkenKnitwits
             ? new MenuItem()
             : new MenuItem { Link = OdkRoutes.MemberGroups.GroupDelete(platform, chapter), Text = "Delete" },
+    };
+
+    var membersLinks = new[]
+    {
+        new MenuItem { Link = OdkRoutes.MemberGroups.MemberAdmins(platform, chapter), Text = "Admins" },
+        new MenuItem { Link = OdkRoutes.MemberGroups.MembershipSettings(platform, chapter), Text = "Membership" },
+        new MenuItem
+        {
+            Link = OdkRoutes.MemberGroups.MembersSubscriptions(platform, chapter),
+            Text = "Subscriptions"
+        },
+        new MenuItem { Link = OdkRoutes.MemberGroups.MembersEmail(platform, chapter), Text = "Bulk email" },
+        platform == PlatformType.DrunkenKnitwits
+            ? new MenuItem()
+            : new MenuItem { Link = OdkRoutes.MemberGroups.MemberApprovals(platform, chapter), Text = "Approvals" }
     };
 
     var superadminLinks = platform == PlatformType.DrunkenKnitwits && User.IsInRole(OdkRoles.SuperAdmin)
@@ -77,17 +93,7 @@
         {
             Link = OdkRoutes.MemberGroups.Members(platform, chapter),
             Text = "Members",
-            Children = new[]
-            {
-                new MenuItem { Link = OdkRoutes.MemberGroups.MemberAdmins(platform, chapter), Text = "Admins" },
-                new MenuItem { Link = OdkRoutes.MemberGroups.MembershipSettings(platform, chapter), Text = "Membership" },
-                new MenuItem
-                {
-                    Link = OdkRoutes.MemberGroups.MembersSubscriptions(platform, chapter),
-                    Text = "Subscriptions"
-                },
-                new MenuItem { Link = OdkRoutes.MemberGroups.MembersEmail(platform, chapter), Text = "Bulk email" }
-            }
+            Children = membersLinks.Where(x => !string.IsNullOrEmpty(x.Text)).ToArray()
         },
         superadminLinks.Length > 0
             ? new MenuItem
