--- a/ODK.Web.Razor/wwwroot/css/_navbar.scss
+++ b/ODK.Web.Razor/wwwroot/css/_navbar.scss
@@ -104,6 +104,7 @@ $navbar-dark-separator: rgba(255, 255, 255, .5);
 }
 
 .navbar--group {
+    background-color: var(--odk-bg-level-2);
     .navbar-nav {
         display: flex;
         gap: 1rem;
