Append version to all css/js

--- a/ODK.Web.Razor/Views/Shared/Components/Styles/_Imaging.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/Styles/_Imaging.cshtml
@@ -1,1 +1,1 @@
-﻿<link rel="stylesheet" href="/lib/cropperjs/cropper.min.css" />
+﻿<link rel="stylesheet" href="/lib/cropperjs/cropper.min.css" asp-append-version="true" />
