--- a/ODK.Web.Razor/Pages/SuperAdmin/Messages.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Messages.cshtml
@@ -2,7 +2,7 @@
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Contact
-@model ODK.Web.Razor.Pages.SuperAdmin.MessagesModel
+@model MessagesModel
 @inject IContactAdminService ContactAdminService
 @{
     Layout = "_SiteAdminLayout";
