--- a/ODK.Web.Razor/Views/Shared/Account/_IssuesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_IssuesContent.cshtml
@@ -14,6 +14,8 @@
         <thead>
             <tr>
                 <th>Issue</th>
+                <th>Type</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
@@ -23,6 +25,8 @@
                     <td>
                         <a href="@OdkRoutes.Account.Issue(issue.Id)">@issue.Title</a>
                     </td>
+                    <td>@issue.Type</td>
+                    <td>@issue.Status</td>
                 </tr>
             }
         </tbody>
