--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -12692,6 +12692,7 @@ html[data-platform=odk] {
   top: 0;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 .side-menu .nav-link {
   color: var(--odk-side-menu-color);
