Admin menu in mobile

--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
@@ -7,7 +7,7 @@
 @using ODK.Web.Razor.Models.Components
 @model BulkEmailAdminPageViewModel
 
-<h2>Bulk email</h2>
+<h2 class="d-none d-md-block">Bulk email</h2>
 
 @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel
 {
