--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -16,7 +16,7 @@
         (Model.ChapterSubscriptions, Model.PaymentSettings?.Currency, Model.MembershipSettings);
 }
 
-<h2>Subscriptions</h2>
+<h2 class="d-none d-md-block">Subscriptions</h2>
 
 <section class="section">
     @if (Model.ChapterSubscriptions.Count == 0)
