--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_MembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_MembersContent.cshtml
@@ -11,7 +11,7 @@
     var adminMembers = await ChapterAdminService.GetChapterAdminMembers(serviceRequest);
 }
 
-<h2>Members</h2>
+<h2 class="d-none d-md-block">Members</h2>
 
 <div class="table-responsive">
     <table class="table table-striped">
