--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentsContent.cshtml
@@ -7,7 +7,7 @@
 @using ODK.Web.Razor.Models.SuperAdmin
 @model SitePaymentSettings
 
-<h2>Payment settings</h2>
+<h2 class="d-none d-md-block">Payment settings</h2>
 
 <section class="section">
     <form method="post">
