--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMembersContent.cshtml
@@ -22,7 +22,7 @@
         .Select(x => new SelectListItem { Value = x.Id.ToString(), Text = x.FullName });
 }
 
-<h2>Admin members</h2>
+<h2 class="d-none d-md-block">Admin members</h2>
 
 <section class="section">
     @if (Model.AdminMembers.Count == 1)
