--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenuesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenuesContent.cshtml
@@ -6,6 +6,7 @@
 @using ODK.Services.Venues.ViewModels
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Admin
 @model VenuesAdminPageViewModel
 @{    
     var (venues, events) = (Model.Venues, Model.Events);
@@ -18,42 +19,45 @@
         .ToDictionary(x => x.Key, x => x.Max(_ => _.Date));
 }
 
-<h2>Venues</h2>
+@await Html.PartialAsync("Admin/_AdminBody", new AdminBodyViewModel
+{
+    Title = "Venues",
+    ContentFunc = 
+        @<section class="section">
+            <p>
+                <a href="@OdkRoutes.MemberGroups.VenueCreate(Model.Platform, Model.Chapter)" class="btn btn-primary">Create</a>
+            </p>
 
-<section class="section">
-    <p>
-        <a href="@OdkRoutes.MemberGroups.VenueCreate(Model.Platform, Model.Chapter)" class="btn btn-primary">Create</a>
-    </p>
-
-    <div class="table-responsive">
-        <table class="table table-striped" data-sortable>
-            <thead>
-                <tr>
-                    <th data-sortable-sort="default">Name</th>
-                    <th>Address</th>
-                    <th data-sortable-sort data-sortable-dir="desc">Events</th>
-                    <th data-sortable-sort data-sortable-dir="desc">Last Event</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var venue in venues.OrderBy(x => x.Name))
-                {
-                    <tr>
-                        <td>
-                            <a data-sort-value="@venue.Name" href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, venue.Id)">@venue.Name</a>
-                        </td>
-                        <td>@venue.MapQuery</td>
-                        <td>@(eventCounts.ContainsKey(venue.Id) ? eventCounts[venue.Id] : 0)</td>
-                        <td>
-                            @if (lastEvents.TryGetValue(venue.Id, out DateTime lastEventDate))
-                            {
-                                <span class="d-none" data-sort-value="@lastEventDate.ToString("yyyy-MM-dd")"></span>
-                                @lastEventDate.EventDate()
-                            }
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</section>
+            <div class="table-responsive">
+                <table class="table table-striped" data-sortable>
+                    <thead>
+                        <tr>
+                            <th data-sortable-sort="default">Name</th>
+                            <th>Address</th>
+                            <th data-sortable-sort data-sortable-dir="desc">Events</th>
+                            <th data-sortable-sort data-sortable-dir="desc">Last Event</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var venue in venues.OrderBy(x => x.Name))
+                        {
+                            <tr>
+                                <td>
+                                    <a data-sort-value="@venue.Name" href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, venue.Id)">@venue.Name</a>
+                                </td>
+                                <td>@venue.MapQuery</td>
+                                <td>@(eventCounts.ContainsKey(venue.Id) ? eventCounts[venue.Id] : 0)</td>
+                                <td>
+                                    @if (lastEvents.TryGetValue(venue.Id, out DateTime lastEventDate))
+                                    {
+                                        <span class="d-none" data-sort-value="@lastEventDate.ToString("yyyy-MM-dd")"></span>
+                                        @lastEventDate.EventDate()
+                                    }
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </section>
+})
