--- a/ODK.Web.Razor/Views/Shared/Admin/_AdminBody.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/_AdminBody.cshtml
@@ -12,7 +12,7 @@
 
 @if (!string.IsNullOrEmpty(Model.Title))
 {
-    <h2>@Model.Title</h2>
+    <h2 class="d-none d-md-block">@Model.Title</h2>
 }
 
 <section class="section">
