--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramContent.cshtml
@@ -7,7 +7,7 @@
     var settings = await SettingsService.GetSiteSettings();
 }
 
-<h2>Instagram</h2>
+<h2 class="d-none d-md-block">Instagram</h2>
 
 <form method="post" class="mb-3">
     @await Html.PartialAsync("SuperAdmin/_InstagramForm", new InstagramFormViewModel
